--- a/login.html
+++ b/login.html
@@ -1,13 +1,14 @@
+---
+layout: default
+id: signin
+status: 
+---
 
-<div class="modal fade in" id="signIn">
 
-	<div class="modal-dialog" role="document">
-	    <div class="modal-content">
+<!-- LOGIN CONTAINER -->
+<div class="container signin col-md-3">
 
-<div class="modal-header">
 	<h2>Quick,<br/>log me in!</h2>
-</div>
-<div class="modal-body">
 	<form>
 
 		<!-- Email -->
@@ -27,19 +28,14 @@
 			  <input type="checkbox"> Remember me</a>
 		</div>
 
-		<button type="button" class="btn btn-secondary btn-arrow" data-dismiss="modal">Cancel</button>
+		<button href="index.html" class="btn btn-secondary btn-arrow">Cancel</button>
 		<button type="submit" class="btn btn-default btn-arrow">Sign Me In</button>
 	</form>
-</div>
-
-<div class="modal-footer">
 		<hr/>
 
 		<a href="javascript:void(0)">I forgot my password</a>
-		<a href="#" id="register" data-toggle="modal" data-target="#signUp">Sign me up.</a>
+		<a id="register" href="register.html">Sign me up</a>
+
 
 </div>
-	
-		</div>
-	</div>
-</div>
+<!-- END CONTAINDER -->
