--- a/profile.html
+++ b/profile.html
@@ -1,16 +1,16 @@
 ---
 layout: default
+status: logged-in
 ---
 
 <div class="container">
-
-{% include sign-up-modal.html %}
-
-{% include login-modal.html %}
 	
-	<h1 class="page-title col-lg-12">
-		Manage Profile
-	</h1>
+	<!-- PAGE HEADER -->
+	<div class="page-header col-lg-12">
+		<div class="page-title col-lg-6">
+			<h1>Manage Profile</h1>
+		</div>
+	</div>
 
 	<form>
 
