--- a/register.html
+++ b/register.html
@@ -1,15 +1,16 @@
+---
+layout: default
+id: register
+status: 
+---
 
-<div class="modal fade in" id="signUp">
+<!-- REGISTER CONTAINER -->
+<div class="container signin col-md-3">
 
-	<div class="modal-dialog" role="document">
-	    <div class="modal-content">
-
-<div class="modal-header">
 	<h2>Sign up for free!</h2>
 
 	<p>Sign up for a free acount in a few quick steps, save your searches and start getting alerts in minutes.</p>
-</div>
-<div class="modal-body">
+
 	<form>
 
 		<!-- First Name -->
@@ -37,12 +38,10 @@
 			  <input type="checkbox"> I accept the <a href="">terms of use</a>
 		</div>
 
-		<button type="button" class="btn btn-secondary btn-arrow" data-dismiss="modal">Cancel</button>
+		<button type="button" class="btn btn-secondary btn-arrow" href="index.html">Cancel</button>
 		<button type="submit" class="btn btn-default btn-arrow">Sign Me Up</button>
 
 	</form>
+
 </div>
-	
-		</div>
-	</div>
-</div>
+<!-- END CONTAINDER -->
