--- a/login.html
+++ b/login.html
@@ -31,10 +31,11 @@ status:
 		<button href="index.html" class="btn btn-secondary btn-arrow">Cancel</button>
 		<button type="submit" class="btn btn-default btn-arrow">Sign Me In</button>
 	</form>
-		<hr/>
 
+	<div class="form-footer">
 		<a href="javascript:void(0)">I forgot my password</a>
 		<a id="register" href="register.html">Sign me up</a>
+	</div>
 
 
 </div>
