EOD commit - Monday

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@ status:
 			  <input type="checkbox"> Remember me</a>
 		</div>
 
-		<button href="index.html" class="btn btn-secondary btn-arrow">Cancel</button>
+		<a href="home.html" class="btn btn-secondary btn-arrow">Cancel</a>
 		<button type="submit" class="btn btn-default btn-arrow">Sign Me In</button>
 	</form>
 
