--- a/home.html
+++ b/home.html
@@ -7,26 +7,28 @@ id: home
 
 	<div class="wrapper col-lg-12 text-center">
 		<p class="text-left">Get instant alerts now!</p>
-		<div class="col-lg-5 panel panel-default">
+		<div class="col-sm-5 panel panel-default">
 			<div class="panel-heading">
 				<h4 class="text-uppercase">For Buyers & Tenants</h4>
 			</div>
 			<div class="panel-body">
+				<img src="assets/qre-house-alert.png">
 				<h1>Get property alerts quick!</h1>
 			</div>
 			<div class="panel-footer">
-				<button class='btn-default btn-arrow'>Sign me up now!</button>
+				<a class='btn-default btn-arrow' href="login">Sign me up now!</a>
 			</div>
 		</div>
-		<div class="col-lg-5 col-lg-offset-2 panel panel-default">
+		<div class="col-sm-5 col-sm-offset-2 panel panel-default">
 			<div class="panel-heading">
 				<h4 class="text-uppercase">For Agents</h4>
 			</div>
 			<div class="panel-body">
+				<img src="assets/qre-house-list-large.png">
 				<h1>Get property alerts quick!</h1>
 			</div>
 			<div class="panel-footer">
-				<button class='btn-default btn-arrow'>Get listing now!</button>
+				<a class='btn-default btn-arrow' href="">Get listing now!</a>
 			</div>
 		</div>
 		<div class="col-lg-12 text-left search">
@@ -35,7 +37,7 @@ id: home
 				<input type="text" placeholder="I'm looking for houses around..." class="form-control">
 				<button class="btn-default btn-arrow">Find Houses Quick!</button>
 			</div>
-			<a href="javascript-void(0)"><p>+ Refine search options</p></a>
+			<a href="javascriptvoid(0)"><p>+ Refine search options</p></a>
 		</div>
 	</div>
 
@@ -45,5 +47,28 @@ id: home
 	<div class="wrapper">
 		<h1>Find real estate listings in real time! Australias newest and fastest real estate listing site, bringing you the newest listings first! Don’t miss out on your dream home, find it here before anyone else.</h1>
 		<button class="btn-default btn-arrow">Get to know us</button>
+	</div>
+</div>
+
+<div class="container text-center">
+	<div class="wrapper">
+		<div class="col-sm-4">
+			<img class="col-image" alt="QRE House Listing Icon" src="assets/qre-house-list.png">
+			<h2>Get your properties seen faster here!</h2>
+			<p class="text-left">When you don't have to spend your time getting photography and awaiting approvals you can get your properties in front of potential customers faster. Sign up now and get listing quick! </p>
+			<a class="btn-default btn-arrow" href="">I need to start listing, now!</a>
+		</div>
+		<div class="col-sm-4">
+			<img class="col-image" alt="QRE House Search Icon" src="assets/qre-house-search.png">
+			<h2>Quickly find the home you’re looking for!</h2>
+			<p class="text-left">With how quick the Real Estate market moves today it helps to be the first one in the door. Sign up for quick alerts to get the jump on your dream home the moment it hits the market!</p>
+			<a class="btn-default btn-arrow" href="">Quick I need alerts</a>
+		</div>
+		<div class="col-sm-4">
+			<img class="col-image" alt="QRE Thought Bubble Icon" src="assets/qre-questions-bubble.png">
+			<h2>Quick answers to your questions!</h2>
+			<p class="text-left">Sound too good to be true? It's not, learn a bit about how we make it easier for agents to get properties to market and simpler for home buyers to find their home quickly.</p>
+			<a class="btn-default btn-arrow" href="how-it-works.html">Quick, tell me more</a>
+		</div>
 	</div>
 </div>
