how it works SVG working on desktop

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -2,3 +2,42 @@
 layout: landing
 id: how-it-works
 ---
+
+<div class="container">
+	<div class="page-header page-title">
+		<h1 class="text-center">How Quick Real Estate Works</h1>
+	</div>
+
+	{% include test.html %}
+
+
+<h1 class="text-center">How quick is quick?! </h1>
+<p class="text-center">Check out the latest listings we have received! Sign up now to get <br/>(or send) access to instant property alerts now! </p>
+
+
+	<div class="col-lg-4 col-lg-offset-1 col-sm-6 col-xs-12">
+		<h1>Quickly get to market first! </h1>
+		<p>Our most recently posted properties. Be the first to make a move.</p>
+		<a class="btn-default btn-arrow">Start listing!</a>
+	</div>
+
+	<div class="col-lg-4 col-lg-offset-2 col-sm-6 col-xs-12">
+		<h1>Not registered?! </h1>
+		<p>Either sign up updates quickly or use our search form to see what’s out there today!</p>
+		<a class="btn-default btn-arrow">Sing up now!</a>
+	</div>
+
+</div>
+
+<div class="blue search-bar">
+	<div class="container">
+		<div class="col-lg-12 text-left search">
+			<h3>Search Quick Listings</h3>
+			<div class="input-group">
+				<input type="text" placeholder="I'm looking for houses around..." class="col-sm-9 col-xs-12">
+				<button class="btn-default btn-arrow">Find Houses Quick!</button>
+			</div>
+			<a href="javascriptvoid(0)"><p>+ Refine search options</p></a>
+		</div>
+	</div>
+</div>
