made home / how it works responsive

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -15,6 +15,10 @@ id: how-it-works
 <p class="text-center">Check out the latest listings we have received! Sign up now to get <br/>(or send) access to instant property alerts now! </p>
 
 
+	<div class="col-sm-12">
+		{% include current-listings.html %}
+	</div>
+
 	<div class="col-lg-4 col-lg-offset-1 col-sm-6 col-xs-12">
 		<h1>Quickly get to market first! </h1>
 		<p>Our most recently posted properties. Be the first to make a move.</p>
